# cs2024-ntl-validate

./: .gitignore  Makefile  README.md
checkin/: pyproject.toml
checkin/checkin/: __main__.py  checkin.py
configs/: verifier.service
data/: dvmcmd
docs/walkthrough/: README.md
encflag/: Makefile
encflag/src/: xtea_encrypt.c
gentoken/src/: gentoken.c
libvalidate/src/: libvalidate.c
scripts/: copy_phony_symbols.sh  encrypt_string.py  erase_gcc_info.py  gen_xor_key.py  solver_template.py
src/: validate.c
tools/checkin/checkin/: __init__.py
tools/encflag/: Makefile
tools/encflag/src/: xtea_encrypt.c
tools/gentoken/: Makefile
tools/gentoken/src/: gentoken.c
tools/libvalidate/: Makefile
tools/libvalidate/scripts/: validate.py
tools/libvalidate/src/: libvalidate.c
tools/solver/: pyproject.toml
tools/solver/solver/: __init__.py  __main__.py  solver.py
tools/verifier/: Makefile  go.mod  go.sum  pyproject.toml
tools/verifier/cmd/verifier/: verifier.go
tools/verifier/verifier/: __main__.py  verifier.py
